--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       - .:/dev-env
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/.gitconfig:/home/ubuntu/.gitconfig:ro
+      - ~/.kube:/home/ubuntu/.kube:ro
     environment:
       IBMCLOUD_API_KEY: "$IBMCLOUD_API_KEY"
     working_dir: /dev-env
